cabal-version: 2.4
name: parss
version: 0.1.0.0

common shared
  default-language: Haskell2010
  default-extensions:
    LambdaCase
    , TupleSections
    , FlexibleInstances
    , FlexibleContexts
  ghc-options:
    -Weverything
    -Wno-missing-safe-haskell-mode
    -Wno-implicit-prelude
    -Wno-missing-kind-signatures
    -Wno-missing-deriving-strategies
    -Wno-name-shadowing
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-prepositive-qualified-module
    -Wno-unused-do-bind
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction
    -Wno-missing-local-signatures

library
  import: shared
  hs-source-dirs: src
  exposed-modules:
    Parser
    , Stream
    , Combinators
  build-depends:
    base
    , text
    , bytestring

test-suite test
  import: shared
  hs-source-dirs: test
  other-modules:
    Harness
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    base
    , parss
    , HUnit
