cabal-version: 2.4
name: parss
version: 0.1.0.0

common common
  default-language: Haskell2010
  default-extensions:
    LambdaCase
    , TupleSections
    , FlexibleInstances
    , FlexibleContexts
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-name-shadowing
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-unused-do-bind
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction
    -Wno-missing-local-signatures
    -Wno-safe

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Parser
    , Stream
    , Combinators
  build-depends:
    base

test-suite test
  import: common
  hs-source-dirs: test
  other-modules:
    Harness
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    base
    , parss
    , HUnit
