cabal-version: 2.4
name: parss
version: 0.1.0.0
synopsis: Multi-pass parsers
homepage: https://github.com/willmcpherson2/parss
bug-reports: https://github.com/willmcpherson2/parss/issues
category: Parsing
author: Will McPherson
license: MIT
license-file: LICENSE

common common
  default-language: Haskell2010
  default-extensions:
    LambdaCase
    , TupleSections
    , FlexibleInstances
    , FlexibleContexts
  ghc-options:
    -Weverything
    -Wno-implicit-prelude
    -Wno-name-shadowing
    -Wno-unsafe
    -Wno-missing-import-lists
    -Wno-unused-do-bind
    -Wno-missed-specialisations
    -Wno-all-missed-specialisations
    -Wno-monomorphism-restriction
    -Wno-missing-local-signatures
    -Wno-safe
  if impl(ghc >= 8.8.1)
    ghc-options: -Wno-missing-deriving-strategies
  if impl(ghc >= 8.10)
    ghc-options: -Wno-prepositive-qualified-module
  if impl(ghc >= 8.10.1)
    ghc-options: -Wno-missing-safe-haskell-mode
  if impl(ghc >= 9.2)
    ghc-options: -Wno-missing-kind-signatures

library
  import: common
  hs-source-dirs: src
  exposed-modules:
    Parss
    Parss.Parser
    Parss.Stream
    Parss.Combinators
    Parss.Trans
  build-depends:
    base
    , transformers

test-suite test
  import: common
  hs-source-dirs: test
  other-modules:
    Harness
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    base
    , parss
    , HUnit
